Fix: header width overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ th {
     font-size: large;
     align-items: center;
     height: 60px;
-    width: 100%;
+    width: 98%;
     padding: 4px;
     background-color: var(--color-darker);
     color: whitesmoke;
